# TP3-SO1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
lib/memory/include/: log.h  memory.h
lib/memory/src/: log.c  memory.c
lib/memory/tests/: CMakeLists.txt  test.c
